 * XvMC accelerated modules. Use VAAPI instead.
 * MGA (Matroska) for Linux. Use Linux Framebuffer (or X) instead.
 * opengllayer. Use macosx_video instead.
 * cddax. Use cdda instead.
 * cmml and tarkin codecs are removed because they are dead codecs.
 * realaudio codecs are removed in favor of libavcodec
 * access_file removed in favor of filesystem


Changes between 1.0.4 and 1.0.5:
--------------------------------

Decoders:
 * SubRip extra styles improvements
 * Fix potential crashes in SSA and svg decoders

Mac OS X Interface:
 * Improved support for the 2009 Apple Remote

Windows port:
 * Use of gcc 4.4.2 to compile instead of gcc 4.2. This might slightly
   increase performance and fix x264 issues

Translations:
 * Portuguese Brazilian, Lithuanian, Romanian, Ukrainian, Japanese, Bengali,
   Walloon, Galician, Danish, Khmer, Polish, Slovenian, Vietnamese, Finnish
   Russian, Slovak translation updates
 * New Malayalam, Macedoninan, Nynorsk translations


Changes between 1.0.3 and 1.0.4:
--------------------------------

Audio outputs:
 * Fix deadlocks in the audio output core
 * Make PulseAudio the default output if available

Video outputs:
 * Fix fullscreen mode with KDE 4.3.3 and other window managers
 * Fix incompatibility with cairo-dock and compositing

Input:
 * Fix DVB scanning regression from VLC 1.0.3
 * Support for XZ-compressed byte stream (LZMA algorithm)

Playlist:
 * Support for .m3u8 playlist files (UTF-8 M3U)

Unix:
 * Support for xcb-keysyms version 0.3.4 or higher
 * Fix globalhotkeys on FreeBSD

Qt4 interface:
 * Fix opening V4L version 1 devices
 * Fix default destination ports in the streaming wizard

Translations:
  * New Walloon translation
  * Swedish, Ukrainian and French translation updates


Changes between 1.0.2 and 1.0.3:
--------------------------------

Video outputs:
 * Fix video quality when resizing the video on Windows Vista and 7, due to
   regressions in most popular drivers