@@ -71,7 +71,6 @@ libvlc_LTLIBRARIES += \
 	libaccess_http_plugin.la \
 	libaccess_ftp_plugin.la \
 	libaccess_fake_plugin.la \
-	libaccess_rtmp_plugin.la \
 	libaccess_imem_plugin.la \
 	libaccess_attachment_plugin.la \
 	$(NULL)
@@ -82,5 +81,7 @@ libxcb_screen_plugin_la_CFLAGS = $(AM_CFLAGS) \
 libxcb_screen_plugin_la_LIBADD = $(AM_LIBADD) \
 	$(XCB_LIBS)
 libxcb_screen_plugin_la_DEPENDENCIES =
-EXTRA_LTLIBRARIES += libxcb_screen_plugin.la
+EXTRA_LTLIBRARIES += \
+	libaccess_rtmp_plugin.la \
+	libxcb_screen_plugin.la
 libvlc_LTLIBRARIES += $(LTLIBxcb_screen)
